# c0

./: .dockerignore  .gitignore  BENCH.md  CONTRIBUTING.md  Cargo.toml  Dockerfile.test  EVAL.md  README.md  docker-compose.test.yml  docker-compose.yml
.githooks/: pre-commit  pre-push
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  dependabot-auto-merge.yml
assets/: demo-hybrid.tape  demo-reflect-setup.sh  demo-reflect.tape  demo-temporal-setup.sh  demo-temporal.tape  demo.tape
scripts/: ci.sh  docker-test.sh  extract_transcript.py  integration-test.sh  seed-test-graph.sh
src/: audit.rs  bench.rs  claude.rs  config.rs  embeddings.rs  eval.rs  export.rs  extract.rs  fetch.rs  graph.rs  main.rs  reflector.rs  sessions.rs
tests/fixtures/: session-demo.jsonl
